--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <div class="game-container">
         <h1>Lukey Pukey's Rocks, Papers and some Scissors!!!</h1>
         <div class="choices">
-            <button class="choice-btn" id="rock">Lukey's Rock</button>
-            <button class="choice-btn" id="paper">Lukey's Paper</button>
-            <button class="choice-btn" id="scissors">Lukey's Scissors</button>
+            <button className ="choice-btn" id="rock">Lukey's Rock</button>
+            <button className="choice-btn" id="paper">Lukey's Paper</button>
+            <button className="choice-btn" id="scissors">Lukey's Scissors</button>
         </div>
         <div class="result">
             <p id="user-choice">Your choice: </p>
             <p id="computer-choice">Computer's choice: </p>
-            <h2 id="game-result"></h2>
+            <h2 id="result"></h2>
         </div>
     </div>
     <script src="js/rockndpaper.js"></script>
